<resources>
    <string name="app_name">Paranoid Fan</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_disclaimer">Disclaimer</string>
    <string name="content_title_disclaimer">Scroll down to accept this agreement:</string>
    <string name="content_disclaimer">You’re about to join a social network for sports fans where you make new friends, share experiences and get engaged into your community.\nOur app is driven by user geo-location and collaboration, as such we depend on you to help us build our community. By clicking ACCEPT you confirm that:\n You have read and agree to the Terms of Use and Privacy Policy (the “agreements”) which can be found in the settings section of the app."
    "\nThe use of the Service is subject to the Agreements and indicates your consent to them.  This summary is not meant to replace them.  It is intended for convenience purposes only. YOUR USE OF THIS REAL TIME LOCATION APPLICATION IS AT YOUR SOLE RISK."
    "\n\nIT WILL TRACK YOUR LOCATION AND ALLOW OTHER PUBLIC (NON-FRIEND) USERS TO DO THE SAME. IF YOU FEEL UNCOMFORTABLE WITH THIS CAPABILITY, WE ASK THAT YOU EITHER DISABLE THE TRACKING OR REMOVE\nTHE APP FROM YOUR DEVICE.  You agree to Paranoid Fan receiving from your mobile device detailed location and other pertinent information, for example in the form of GPS signals and other information.  Paranoid Fan uses this information to the offer the Service to you, to improve the quality of the service it offers.  In particular, Paranoid Fan uses this data to aggregate, build and refine a sports-orientated interest graph.\r\n\r\nAlways be careful when making engaging others and/or new friends on our application.  You can always contact us at help@paranoidfan.com if you find yourself in an awkward or sticky situation.\n\n"
        "You hereby confirm that you own all exclusive rights at any data and content that you provide to the Service and may assign in license such rights.  You keep all title and rights to the content, but you grant Paranoid Fan a worldwide, free, non-exclusive, irrevocable, sublicensable, transferable and perpetual license to use, copy, distribute, create derivative works o, public display, public perform and exploit in any other manner the content.  Subject the aforementioned, Paranoid Fan keeps title and all rights to the Service’s database which you may use for non-commercial and private purposes only. Paranoid Fan is offered for free with the hope that you use our application to help us build a community.  However, Paranoid Fan or its employees, directors, shareholders, advisors, or anyone on its behalf shall not be liable to you or to any third party, for any reason whatsoever, as result with the use of the company’s product or service.  You hereby irrevocably release all of the above from an liability of any kind, for any consequence arising from the use of this application or service, including for any loss, loss of profit, damage of reputation, fee, expense or damage, direct or indirect, financial or non-financial.</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_login">Login</string>
    <string name="forget_password_button">Forget Your Password?</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="action_send">Send</string>
    <string name="label_forget_password">Enter your email and we\'ll send you a password reset link</string>

    <!-- Strings related to signup -->
    <string name="prompt_signup_name">Your name</string>
    <string name="prompt_signup_email">Your email</string>
    <string name="prompt_signup_birthday">Birthdate</string>
    <string name="title_activity_phone_verify">Verify Phone</string>

    <string name="phone_verify_description">Please verify your phone number so we know you\'re a real person!</string>
    <string name="phone_verify_warning">We will not display number to other paranoid fan users. Read our privacy policy to learn more.</string>
    <string name="phone_verify_number">Mobile Number</string>
    <string name="action_verify">Verify</string>
    <string name="title_activity_phone_confirm">Confirm Phone</string>

    <string name="phone_confirm_description">Enter the verification code which has been sent on your given mobile number.</string>
    <string name="phone_confirm_warning">Didn\'t receive the code yet? click here to resend.</string>
    <string name="phone_confirm_code">Enter Code</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_confirm">Confirm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_map">Map</string>
    <string name="pick_image_intent_text">Photo Upload</string>
    <string name="title_activity_friend_list">FriendListActivity</string>

    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="title_activity_review">Reviews</string>
    <string name="title_activity_favorite">Favorites</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_chat">Local Chat</string>

    <string name="title_activity_meetme">Meet Me</string>
    <string name="title_meetme">Share your location with friends for a quick and painless meetup</string>
    <string name="text_writesomething">Write something here...</string>
    <string name="text_RequestToMeet">Request to Meet</string>
    <string name="text_default_meetme">Hi! I\'m using the Paranoid Fan app to invite you to meet me at this location:</string>

    <string name="text_sendrequest">Send Request</string>
    <string name="title_activity_groups">Groups</string>

    <string name="group_startnow">Start a group now</string>
    <string name="group_desc">We will even give you a blue \"verified\" checkmark</string>
    <string name="group_edithint">Enter your group name here</string>
    <string name="group_upload">tap here to upload image</string>
    <string name="group_chooseteam">(choose team affiliation)</string>
    <string name="group_signin">Already invited? You will find the group in your inbox</string>

    <string name="title_activity_selectteam">Select Team</string>
    <string name="title_activity_groupprofile">Group Profile</string>

    <string name="group_profile_join">Join</string>
    <string name="group_profile_message">Message</string>
    <string name="group_profile_Invite">Invite</string>
    <string name="group_profile_Transfer_Funds">Transfer Funds</string>
    <string name="group_profile_leave_message_title">Leaving Group?</string>
    <string name="group_profile_leave_message">Are you sure you want to leave this group?</string>

    <string name="title_activity_groupchat">Group Chat</string>

    <string name="title_activity_inbox">Inbox</string>

    <string name="title_activity_messages">Messages</string>

    <string name="title_activity_contactlist">Friends</string>

    <string name="title_activity_settings">Settings</string>

    <string name="title_activity_editprofile">Edit Profile</string>

    <string name="title_activity_addpayment">Payments</string>
    <string name="text_add_payment_info">Make money by leaving tips and awesome reviews. Also tip others that help you and leave cool content for our community.</string>
    <string name="text_card_name">Name on Card</string>
    <string name="text_card_number">Card Number</string>
    <string name="text_expiry">Expiry   mm / yy</string>
    <string name="text_cvv">CVV</string>

    <string name="title_activity_changepassword">Change Password</string>
    <string name="text_old_password">Old Password</string>
    <string name="text_new_password">New Password</string>
    <string name="text_confirm_password">Confirm Password</string>

    <string name="title_activity_termsofuse">Terms of Use</string>

    <string name="title_activity_social">Social</string>
    <string name="text_social_info">Connecting to your social accounts allows you to share your status updates with your friends over Facebook and Twitter.</string>

    <string name="title_activity_privacy_settings">Privacy Settings</string>
    <string name="text_location_search_title">Location/Friend Search</string>
    <string name="text_location_search_info">Show your location on our map for our friend search</string>
    <string name="text_checkin_network_title">Check-in on Social Networks</string>
    <string name="text_checkin_network_info">Allow your check-ins to be posted to your connected social networks</string>

    <string name="title_activity_cutomization">Teams</string>
    <string name="text_search_team_hint"> Who are your favorite teams?</string>

    <string name="title_activity_eventlist">Near By Events</string>

    <string name="title_activity_choose_skin">Choose Skin</string>
<!--//emoticons testing-->
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

    <string name="button_description">Emoticons Button</string>
    <string name="chat_hint">Enter text here</string>
    <string name="post">Post</string>
    <string name="back">Back</string>

    <string name="DownloadingAllMapInfo">Loading Map</string>

    <string name="text_search">Search...</string>

</resources>
