<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context="pf.paranoidfan.com.paranoidfan.GroupSelectionActivity"
    android:background="@color/colorWhite">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorSignin"
        android:gravity="center_horizontal">
        <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
            android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
                android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
                android:background="@color/colorSignin" app:popupTheme="@style/AppTheme.PopupOverlay" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_groups"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"
                    android:id="@+id/toolbar_title"/>
                <ImageButton
                    android:id="@+id/img_forward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="end"
                    android:background="@mipmap/ic_forward"/>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/group_startnow"
            android:textColor="@color/white"
            android:textSize="13sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_desc"
            android:textColor="@color/white"
            android:textSize="13sp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_margin="20dp"
            android:background="@color/colorSigninLight">
            <ImageView
                android:id="@+id/img_teamprofile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/txt_uploadimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/group_upload"
                android:textColor="@color/white"
                android:textSize="15sp"/>
        </RelativeLayout>
        <EditText
            android:id="@+id/edittxt_groupname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/group_edithint"
            android:textAlignment="center"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/txt_teamselection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/group_chooseteam"
            android:textColor="@color/white"
            android:textSize="11sp"/>
        <TextView
            android:id="@+id/txt_selected_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/group_signin"
            android:textColor="@color/white"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/txt_groupskip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="SKIP"
            android:textColor="@color/white"
            android:textSize="15sp"/>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
