<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context="pf.paranoidfan.com.paranoidfan.GroupProfileActivity"
    android:background="@color/colorWhite">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
            android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
                android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
                android:background="@color/white" app:popupTheme="@style/AppTheme.PopupOverlay" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_groupprofile"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorDarkGrey"
                    android:layout_gravity="center"
                    android:id="@+id/toolbar_title"/>
                <Button
                    android:id="@+id/btn_leave"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="end"
                    android:text="-"
                    android:textColor="@color/colorDarkGrey"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:background="@mipmap/ic_forward"/>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <ImageView
            android:id="@+id/img_group_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">
                    <TextView
                        android:id="@+id/txt_groupname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dregon Ducks for Texas"
                        android:textSize="18sp"
                        android:textColor="@color/colorSignin"/>
                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginLeft="10dp"
                        android:src="@mipmap/ic_verify"
                        />
                    </LinearLayout>
                <TextView
                    android:id="@+id/txt_member_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0 Member(s)"
                    android:textSize="11sp"/>
            </LinearLayout>
            <Button
                android:id="@+id/btn_join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_profile_join"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:background="@color/colorSignin"/>

        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ScrollView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGrey"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <Button
                android:id="@+id/btn_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".35"
                android:text="@string/group_profile_message"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textAllCaps="false"
                android:background="@color/colorSignup"/>
            <Button
                android:id="@+id/btn_invite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/group_profile_Invite"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textAllCaps="false"
                android:background="@color/colorSignup" />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".35"
                android:text="@string/group_profile_Transfer_Funds"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textAllCaps="false"
                android:background="@color/colorSignup"/>
        </LinearLayout>


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>

